Developer/src/objects/PurchaseTransaction__c.object
<CustomObject>
    <fields>
        <fullName>Goods__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売商品</label>
        <referenceTo>Goods__c</referenceTo>
        <relationshipLabel>購買履歴</relationshipLabel>
        <relationshipName>GoodsRelation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>売価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PuchaseDate__c</fullName>
        <label>購買年月日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PuchasedBy__c</fullName>
        <label>購買者</label>
        <referenceTo>UserInformation__c</referenceTo>
        <relationshipLabel>購買履歴</relationshipLabel>
        <relationshipName>PuchasedBy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PurchaseAmount__c</fullName>
        <formula>PurchaseNumber__c  *  Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>購入金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PurchaseNumber__c</fullName>
        <label>購入個数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PurchaseType__c</fullName>
        <label>取引種別</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>購買履歴</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>購買トランザクション名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>